--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,11 +66,11 @@
      "text": [
       "Collecting sqlalchemy==1.3.9\n",
       "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m82.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m102.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
       "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp311-cp311-linux_x86_64.whl size=1142923 sha256=20a35bc1d266ba71c4fd701f0a89a53cebc0a9b83c5796af660965ebe2763a69\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp311-cp311-linux_x86_64.whl size=1142923 sha256=a77dc3a174ec86f91193c441ba8f1781b5a2b4acc4b992d83c9b990f2f87eb26\n",
       "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/3a/7c/1e/12404784a68083eb969f877a1808a1847bab897684b56ddc55\n",
       "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
       "Collecting sqlalchemy>=2.0 (from ipython-sql)\n",
       "  Downloading SQLAlchemy-2.0.36-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.7 kB)\n",
       "Collecting sqlparse (from ipython-sql)\n",
-      "  Downloading sqlparse-0.5.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "  Downloading sqlparse-0.5.2-py3-none-any.whl.metadata (3.9 kB)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (1.16.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.2.0)\n",
       "Requirement already satisfied: typing-extensions>=4.6.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy>=2.0->ipython-sql) (4.11.0)\n",
@@ -135,21 +135,21 @@
       "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
       "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
       "Downloading SQLAlchemy-2.0.36-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m103.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.2/3.2 MB\u001b[0m \u001b[31m90.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
       "\u001b[?25hDownloading prettytable-3.12.0-py3-none-any.whl (31 kB)\n",
-      "Downloading sqlparse-0.5.1-py3-none-any.whl (44 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.2/44.2 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "Downloading sqlparse-0.5.2-py3-none-any.whl (44 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m5.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: sqlparse, sqlalchemy, prettytable, ipython-sql\n",
       "  Attempting uninstall: sqlalchemy\n",
       "    Found existing installation: SQLAlchemy 1.3.9\n",
       "    Uninstalling SQLAlchemy-1.3.9:\n",
       "      Successfully uninstalled SQLAlchemy-1.3.9\n",
-      "Successfully installed ipython-sql-0.5.0 prettytable-3.12.0 sqlalchemy-2.0.36 sqlparse-0.5.1\n",
+      "Successfully installed ipython-sql-0.5.0 prettytable-3.12.0 sqlalchemy-2.0.36 sqlparse-0.5.2\n",
       "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.11/site-packages (0.5.0)\n",
       "Requirement already satisfied: prettytable in /opt/conda/lib/python3.11/site-packages (3.12.0)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (8.22.2)\n",
       "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (2.0.36)\n",
-      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.5.1)\n",
+      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.5.2)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (1.16.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.2.0)\n",
       "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.11/site-packages (from prettytable) (0.2.13)\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "101"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,36 +244,6 @@
    "metadata": {},
    "source": [
     "**Note:This below code is added to remove blank rows from table**\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * sqlite:///my_data1.db\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#DROP THE TABLE IF EXISTS\n",
-    "\n",
-    "%sql DROP TABLE IF EXISTS SPACEXTABLE;"
    ]
   },
   {
@@ -296,6 +266,36 @@
       ]
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#DROP THE TABLE IF EXISTS\n",
+    "\n",
+    "%sql DROP TABLE IF EXISTS SPACEXTABLE;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        " ('Success (payload status unclear)', 1)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,10 +803,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.7 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1056.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1058.3 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.2 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.3</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 B5 B1048.4',),\n",
+       " ('F9 B5 B1048.5',),\n",
+       " ('F9 B5 B1049.4',),\n",
+       " ('F9 B5 B1049.5',),\n",
+       " ('F9 B5 B1049.7 ',),\n",
+       " ('F9 B5 B1051.3',),\n",
+       " ('F9 B5 B1051.4',),\n",
+       " ('F9 B5 B1051.6',),\n",
+       " ('F9 B5 B1056.4',),\n",
+       " ('F9 B5 B1058.3 ',),\n",
+       " ('F9 B5 B1060.2 ',),\n",
+       " ('F9 B5 B1060.3',)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT DISTINCT BOOSTER_VERSION FROM SPACEXTBL WHERE PAYLOAD_MASS__KG_ = (SELECT MAX(PAYLOAD_MASS__KG_) FROM SPACEXTBL) ORDER BY BOOSTER_VERSION;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -822,10 +901,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>MONTH</th>\n",
+       "            <th>Booster_Version</th>\n",
+       "            <th>Launch_Site</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>01</td>\n",
+       "            <td>F9 v1.1 B1012</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>04</td>\n",
+       "            <td>F9 v1.1 B1015</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('01', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n",
+       " ('04', 'F9 v1.1 B1015', 'CCAFS LC-40')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT substr(DATE, 6, 2) AS MONTH, BOOSTER_VERSION, LAUNCH_SITE FROM SPACEXTBL\\\n",
+    "WHERE Landing_Outcome = 'Failure (drone ship)' and substr(\"DATE\",0,5) = '2015'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -841,10 +966,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>TOTAL</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Uncontrolled (ocean)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (parachute)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Precluded (drone ship)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('No attempt', 10),\n",
+       " ('Success (drone ship)', 5),\n",
+       " ('Failure (drone ship)', 5),\n",
+       " ('Success (ground pad)', 3),\n",
+       " ('Controlled (ocean)', 3),\n",
+       " ('Uncontrolled (ocean)', 2),\n",
+       " ('Failure (parachute)', 2),\n",
+       " ('Precluded (drone ship)', 1)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT LANDING_OUTCOME, COUNT(LANDING_OUTCOME) AS TOTAL FROM SPACEXTBL WHERE (DATE BETWEEN  '2010-06-04' and '2017-03-20') GROUP BY LANDING_OUTCOME ORDER BY TOTAL DESC ;"
+   ]
   },
   {
    "cell_type": "markdown",
